--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.11.1-zen1 Kernel Configuration
+# Linux/x86 6.11.2-zen1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 14.2.1 20240910"
 CONFIG_CC_IS_GCC=y
@@ -424,9 +424,10 @@ CONFIG_INTEL_TDX_GUEST=y
 # CONFIG_MZEN2 is not set
 # CONFIG_MZEN3 is not set
 # CONFIG_MZEN4 is not set
+# CONFIG_MZEN5 is not set
 # CONFIG_MPSC is not set
-# CONFIG_MCORE2 is not set
 # CONFIG_MATOM is not set
+# CONFIG_MCORE2 is not set
 # CONFIG_MNEHALEM is not set
 # CONFIG_MWESTMERE is not set
 # CONFIG_MSILVERMONT is not set
@@ -450,14 +451,9 @@ CONFIG_INTEL_TDX_GUEST=y
 # CONFIG_MMETEORLAKE is not set
 # CONFIG_MEMERALDRAPIDS is not set
 CONFIG_GENERIC_CPU=y
-# CONFIG_MAMD_CPU_V2 is not set
-# CONFIG_MAMD_CPU_V3 is not set
-# CONFIG_MAMD_CPU_V4 is not set
-# CONFIG_MINTEL_CPU_V2 is not set
-# CONFIG_MINTEL_CPU_V3 is not set
-# CONFIG_MINTEL_CPU_V4 is not set
 # CONFIG_MNATIVE_INTEL is not set
 # CONFIG_MNATIVE_AMD is not set
+CONFIG_X86_64_VERSION=1
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_TSC=y
@@ -6097,7 +6093,6 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 CONFIG_VIDEO_TUNER=m
-CONFIG_V4L2_JPEG_HELPER=m
 CONFIG_V4L2_MEM2MEM_DEV=m
 CONFIG_V4L2_FLASH_LED_CLASS=m
 CONFIG_V4L2_FWNODE=m
@@ -6413,7 +6408,6 @@ CONFIG_VIDEO_CADENCE_CSI2TX=m
 #
 # Chips&Media media platform drivers
 #
-CONFIG_VIDEO_E5010_JPEG_ENC=m
 
 #
 # Intel media platform drivers
@@ -6451,7 +6445,6 @@ CONFIG_VIDEO_CAFE_CCIC=m
 #
 # Raspberry Pi media platform drivers
 #
-CONFIG_VIDEO_RASPBERRYPI_PISP_BE=m
 
 #
 # Renesas media platform drivers
