--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.12.1-zen1 Kernel Configuration
+# Linux/x86 6.12.2-zen1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 14.2.1 20240910"
 CONFIG_CC_IS_GCC=y
@@ -205,6 +205,7 @@ CONFIG_HAVE_UNSTABLE_SCHED_CLOCK=y
 #
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=5
+# CONFIG_SCHED_ALT is not set
 # end of Scheduler features
 
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
@@ -5258,7 +5259,6 @@ CONFIG_POWER_RESET_MT6323=y
 CONFIG_POWER_RESET_RESTART=y
 CONFIG_POWER_RESET_TPS65086=y
 CONFIG_POWER_SEQUENCING=m
-CONFIG_POWER_SEQUENCING_QCOM_WCN=m
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_POWER_SUPPLY_HWMON=y
